argocd/development/simple/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
spec:
  selector:
    app: http-server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
#    - name: https
#      port: 443
#      protocol: TCP
#      targetPort: 80
