argocd/development/simple/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: dev-ca-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
  name: test-ingress
  namespace: test
spec:
  rules:
    - host: nginx.enthusiast.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kuber-service
                port:
                  number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
    - hosts:
        - nginx.enthusiast.local
      secretName: test-ingress-cert # < cert-manager will store the created certificate in this secret.
